[UI] Top menu is no longer fixed this fixes menu issues on mobile

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -2,10 +2,6 @@
     margin-top: 0px !important;
 }
 
-.container {
-	margin-top: 55px;
-}
-
 #nav-container {
 	margin-top: 0;
 	position: sticky;
